--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -28,7 +28,8 @@
         "vscjava.vscode-java-pack",
         "vscjava.vscode-lombok",
         "redhat.vscode-xml",
-        "ms-azuretools.vscode-docker"
+        "ms-azuretools.vscode-docker",
+        "mongodb.mongodb-vscode"
       ],
       "settings": {
         "java.jdt.ls.java.home": "/usr/local/sdkman/candidates/java/current",
