Added objects to manage AEMET response and added prediction endpoint.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,6 +23,6 @@ aemet:
       base: https://opendata.aemet.es/opendata/api/
       municipios: maestro/municipios
       prediccion: 
-        municipios: prediccion/especifica/municipio/horaria
+        municipio: prediccion/especifica/municipio/diaria/%s
 
     
