--- a/dockerize/dockerfile
+++ b/dockerize/dockerfile
@@ -9,9 +9,11 @@ COPY ${JAR_FILE} app.jar
 ARG MONGO_INITDB_ROOT_USERNAME
 ARG MONGO_INITDB_ROOT_PASSWORD
 ARG AEMET_API_KEY
+ARG CLIENT_ORIGIN
 
 ENV MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
 ENV MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
 ENV AEMET_API_KEY=${AEMET_API_KEY}
+ENV CLIENT_ORIGIN=${CLIENT_ORIGIN}
 
 ENTRYPOINT ["java","-jar","/app.jar"]
