--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
       authentication-database: admin
 
 client:
-  origin: http://localhost:4200
+  origin: ${CLIENT_ORIGIN}
 
 server:
   port: 8080
